--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Muli|UnifrakturCook:700" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <Title>StarkFest 2017</Title>
   </head>
   <body>
     <img src="images/starklogo-alpha.png" alt="StarkFest 2017" class="logo" />
