Updated flyer and lineup.

--- a/index.html
+++ b/index.html
@@ -27,31 +27,40 @@
         </p>
       </div>
       <h1>Full Line-up</h1>
-      <h2>Individual Day Lineups Coming Soon</h2>
+      <h2>Thursday, June 1 (Pre-Show)</h2>
       <div class="lineup">
-        <a class="band-link" href="http://www.cometogrief.com">COME TO GRIEF</a>
-        <a class="band-link" href="http://www.basknc.com">BASK</a>
-        <a class="band-link" href="https://allhell.bandcamp.com">ALL HELL</a>
-        <a class="band-link" href="https://theasound.bandcamp.com">The Asound</a>
-        <a class="band-link" href="https://midmourner.bandcamp.com/">midmourner</a>
-        <a class="band-link" href="https://thefalselight.bandcamp.com/">false light</a>
         <a class="band-link" href="https://blackmountainhunger.bandcamp.com/releases">black mountain hunger</a>
-        <a class="band-link" href="https://wvrmgrind.bandcamp.com/">wvrm</a>
-        <a class="band-link" href="https://waftsc.bandcamp.com/">waft</a>
-        <a class="band-link" href="https://crawldoom.bandcamp.com/">crawl</a>
-        <a class="band-link" href="http://www.swallowtheskyband.com">swallow the sky</a>
-        <a class="band-link" href="https://heathenbastard.bandcamp.com/">heathen bastard</a>
-        <a class="band-link" href="https://tonesc.bandcamp.com">tone</a>
-        <a class="band-link" href="https://dreadedarewe.bandcamp.com/">dreaded</a>
-        <a class="band-link" href="https://tarhagofficial.bandcamp.com/releases">tar hag</a>
-        <a class="band-link" href="https://batheus.bandcamp.com/releases">bathe </a>
-        <a class="band-link" href="https://abacustheband.bandcamp.com/">abacus</a>
-        <a class="band-link" href="https://uninhabitable.bandcamp.com/">uninhabitable</a>
-        <a class="band-link" href="https://cikadadoom.bandcamp.com/releases">cikada</a>
-        <a class="band-link" href="https://avalonsteel.bandcamp.com/">avalon steel</a>
-        <a class="band-link" href="https://kingdomfaust.bandcamp.com/releases">kingdom faust</a>
-        <a class="band-link" href="https://www.facebook.com/mothmothersc">mothmother</a>
         <a class="band-link">death/of</a>
+        <a class="band-link" href="https://kingdomfaust.bandcamp.com/releases">kingdom faust</a>
+        <a class="band-link" href="https://tonesc.bandcamp.com">tone</a>
+        <a class="band-link" href="https://waftsc.bandcamp.com/">waft</a>
+      </div>
+      <h2>Friday, June 2</h2>
+      <div class="lineup">
+        <a class="band-link" href="https://abacustheband.bandcamp.com/">abacus</a>
+        <a class="band-link" href="https://allhell.bandcamp.com">ALL HELL</a>
+        <a class="band-link" href="https://cazadorboston.bandcamp.com/">Cazador</a>
+        <a class="band-link" href="https://dreadedarewe.bandcamp.com/">dreaded</a>
+        <a class="band-link" href="https://thefalselight.bandcamp.com/">false light</a>
+        <a class="band-link" href="https://www.facebook.com/mothmothersc">mothmother</a>
+        <a class="band-link" href="https://uninhabitable.bandcamp.com/">uninhabitable</a>
+        <a class="band-link" href="https://wvrmgrind.bandcamp.com/">wvrm</a>
+      </div>
+      <h2>Saturday, June 3</h2>
+      <div class="lineup">
+        <a class="band-link" href="https://avalonsteel.bandcamp.com/">avalon steel</a>
+        <a class="band-link" href="http://www.basknc.com">BASK</a>
+        <a class="band-link" href="https://batheus.bandcamp.com/releases">bathe </a>
+        <a class="band-link" href="https://canopy1.bandcamp.com/">Canopy</a>
+        <a class="band-link" href="https://cikadadoom.bandcamp.com/releases">cikada</a>
+        <a class="band-link" href="http://www.cometogrief.com">COME TO GRIEF</a>
+        <a class="band-link" href="https://crawldoom.bandcamp.com/">crawl</a>
+        <a class="band-link" href="https://heathenbastard.bandcamp.com/">heathen bastard</a>
+        <a class="band-link" href="https://midmourner.bandcamp.com/">midmourner</a>
+        <a class="band-link" href="http://www.swallowtheskyband.com">swallow the sky</a>
+        <a class="band-link" href="https://tarhagofficial.bandcamp.com/releases">tar hag</a>
+        <a class="band-link" href="https://theasound.bandcamp.com">The Asound</a>
+        <a class="band-link" href="https://waftsc.bandcamp.com/">waft</a>
       </div>
     </div>
   </body>
